更新项目配置，添加开发依赖项和测试路径，修改模板目录结构，优化全局状态管理，注册默认配置验证器，删除不必要的依赖管理规范文件。

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,3 +13,15 @@ dependencies = [
     "tomli-w>=1.2.0",
     "typer-slim[standard]>=0.16.0",
 ]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = "test_*.py"
+python_classes = "Test*"
+python_functions = "test_*"
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.1",
+    "pytest-mock>=3.14.1",
+]
