更新 .gitignore 文件以包含 config.toml 和 gunicorn.conf.py，修改 typer.mdc 文档以简化命令行工具规范，优化模板文件处理逻辑，确保模板文件名统一并增加 jinja2 后缀。加入 Claude.md。

--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,8 @@ wheels/
 # fabik project 
 /fabik.toml
 /fabik.bak*
+/config.toml
+/config.toml.bak*
+/gunicorn.conf.py
+/gunicorn.conf.py.bak*
 tpls/
