更新 fabik 项目，新增生成 requirements.txt 的命令，优化项目结构文档，添加虚拟环境说明，更新 .gitignore 文件以包含 requirements.txt，重构部分代码以支持新功能，并增加相关测试用例。

--- a/.gitignore
+++ b/.gitignore
@@ -11,10 +11,11 @@ wheels/
 
 
 # fabik project 
+/tpls/
 /fabik.toml
 /fabik.bak*
 /config.toml
 /config.toml.bak*
 /gunicorn.conf.py
 /gunicorn.conf.py.bak*
-tpls/
+/requirements.txt
