--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,32 +1,25 @@
-# .readthedocs.yaml
+
+
 # Read the Docs configuration file
 # See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
 
 # Required
 version: 2
 
-# Set the version of Python and other tools you might need
+# Set the OS, Python version, and other tools you might need
 build:
-  os: ubuntu-22.04
+  os: ubuntu-24.04
   tools:
-    python: "3.11"
+    python: "3.13"
 
-# Build documentation in the docs/ directory with Sphinx
+# Build documentation in the "docs/" directory with Sphinx
 sphinx:
    configuration: docs/conf.py
-   builder: html
-   fail_on_warning: false
 
-# If using Sphinx, optionally build your docs in additional formats such as PDF
-formats:
-   - pdf
-   - htmlzip
-   - epub
-
-# Optionally declare the Python requirements required to build your docs
-python:
-   install:
-   - method: pip
-     path: .
-     extra_requirements:
-       - doc
+# Optionally, but recommended,
+# declare the Python requirements required to build your documentation
+# See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
+# python:
+#    install:
+#    - requirements: docs/requirements.txt
+        
