docs(doc): 集成 Mermaid 支持及丰富文档输出格式
- 配置 readthedocs.yaml，增加 Node.js 和 Mermaid CLI 安装步骤
- 扩展 Sphinx 配置，添加 sphinxcontrib-mermaid 插件支持
- 新增文档中使用 Mermaid 绘制替换流程图示例
- 增加文档格式，支持 epub 与 pdf 输出
- 修正文档中 fabik_toml_substitution 锚点命名错误
- 详述环境变量替换流程及示例，更新相关说明内容

feat(conf): 从系统及 .env 文件合并环境变量

- 新增 ConfigReplacer.get_environ 方法，优先加载 .env 文件变量
- 修改替换逻辑，改用合并后的环境变量字典获取值
- 保证 .env 文件中的变量覆盖系统环境变量

chore(deps): 添加 python-dotenv 和 sphinxcontrib-mermaid 依赖

- pyproject.toml 和 uv.lock 中新增 python-dotenv 和 sphinxcontrib-mermaid 依赖
- 保证文档构建及环境变量加载功能正常运行

build(version): 更新 fabik 版本至 25.7.5

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "fabric>=3.2.2",
     "httpx>=0.28.1",
     "jinja2>=3.1.6",
+    "python-dotenv>=1.1.1",
     "tomli-w>=1.2.0",
     "typer-slim[standard]>=0.16.0",
 ]
@@ -46,6 +47,7 @@ doc = [
     "sphinx-rtd-theme>=2.0.0",
     "recommonmark>=0.7.1",
     "rstcheck>=6.0.0",
+    "sphinxcontrib-mermaid>=1.0.0",
 ]
 
 [project.urls]
