--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -11,10 +11,19 @@ build:
   os: ubuntu-24.04
   tools:
     python: "3.13"
+    nodejs: "16"
+  jobs:
+    post_install:
+      - npm install -g @mermaid-js/mermaid-cli
 
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
    configuration: docs/conf.py
+   
+# If using Sphinx, optionally build your docs in additional formats such as PDF
+formats:
+  - epub
+  - pdf
 
 # Optionally, but recommended,
 # declare the Python requirements required to build your documentation
