feat(config): 支持同时管理 fabik.toml 和 .fabik.env 配置文件
- 新增配置验证器，确保两个配置文件都存在
- FabikConfig 支持加载和合并 .fabik.env 环境配置
- ConfigReplacer 初始化时新增环境数据参数，合并环境与 TOML 配置
- 替换变量时优先使用环境配置中的值，如 WORK_DIR、TPL_DIR 和 DEPLOY_DIR
- init 命令扩展为同时创建 fabik.toml 和 .fabik.env 文件，支持 --force 覆盖逻辑
- 部署模块部署时传递空环境配置，保持兼容性
- 修正测试中导入及调用路径，确保测试正确执行

--- a/samples/fabik.toml
+++ b/samples/fabik.toml
@@ -4,25 +4,19 @@
 #
 # @author:  zrong(https://zengrong.net)
 # @source:  https://github.com/zrong/fabik.git
-# @create:  2025-07-22 15:43:45.904225
-# @version: 0.1.0
+# @create:  2025-09-19 14:07:37.306757
+# @version: 25.7.5
 # 
-#
 # Use { { } } to include variable names, which will be replaced with specific values, two curly braces should be continuous, no content should be included, such as no spaces.
 #
-# NAME: project name, defined in config file
+# NAME: project name, defined in fabik.toml or .fabik.env, if you define it in two files, the value in .fabik.env will be used.
 # WORK_DIR: absolute path of project source code folder
-# DEPLOY_DIR: absolute path of deploy folder on server
+# TPL_DIR: absolute path of template folder
 ###########################################
 
 # use NAME to define your project name.
 NAME = 'fabik'
 
-# Python executable name, default is 'python3', you can use a absolute path to specify a specific python executable.
-PYE = 'python3'
-
-# DEPLOY_DIR is the absolute path of deploy folder on server
-DEPLOY_DIR = '/srv/app/fabik'
 
 # Allow to replace environment variables.
 # The following { { } } variables will be replaced with environment variables. Two curly braces should be continuous, no content should be included, such as no spaces.
@@ -35,21 +29,12 @@ DEPLOY_DIR = '/srv/app/fabik'
 #
 # ADMIN_NAME
 # ADMIN_PASSWORD
-# SECRET_KEY
 #
 # You can add environment variables yourself, as long as the variable name in the config file is the same.
 REPLACE_ENVIRON = [
     'ADMIN_NAME',
     'ADMIN_PASSWORD',
 ]
-
-# Define all PATH related variables here.
-[PATH]
-# Define project source code folder, default is the absolute path of fabik command run folder.
-work_dir = "/Users/zrong/storage/zrong/fabik"
-
-# Define template folder, default is the absolute path of fabik command run folder + '/tpls'.
-tpl_dir = "/Users/zrong/storage/zrong/fabik/tpls"
 
 
 # 用于 deploy 上传时排除本地文件
